syntax = "proto3";

option csharp_namespace = "Chatterer_server";

package Messages;

service Messages {
  rpc AddMessage(IncomingMessage) returns (OutgoingMessage);
}

message IncomingMessage {
  string content = 1;
}

message OutgoingMessage {
  string objectId = 1;
  string content = 2;
  string date = 3;
}